--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-OC_ROOT=<Opencart installation directory>
-MODULE_NAME=<Module name>
-MODULE_VER=<Module version>
-MODULE_FOLDER=<Module folder>
-YAKPRO_PO_CONFIG_FILE=<Yakpro config file>
-STORE_DOMAIN=<Store Domain>
-STORE_USERNAME=<Admin username>
-STORE_PASSWORD=<Admin password>
+OC_ROOT="<opencart installation directory>"
+MODULE_NAME="<module name>"
+MODULE_VER="<module version>"
+YAKPRO_PO_CONFIG_FILE="<yakpro config file>"
+STORE_DOMAIN="<store domain>"
+STORE_USERNAME="<admin username>"
+STORE_PASSWORD="<admin password>"
